CI pipeline build and deploy to AWS EBS (#3)
* final update for ci.yml and fix dependencies

* update the actions versions from 3 to 4

* update spring boot from 3.2.1 to 3.3.5

* refacto(JwtService): improve code readability

* add dependency-check-suppression.xml

* update pom.xml and JwtService

* Update .DS_Store

* change database connection string

* chore(ci):add env variable

* Update .gitignore

* Create application-prod.properties

* Create application-staging.properties

* Update application.properties

* add ci.yml

* update .gitignore

* update application.properties

* Add EBS properties files

* updated Buildfile

* remove system.properties

* rename Buildfile

* rename Procfile and move archive to the root of folder

* chore(ebs): remove Buildfile and Procfile

* Add Procfile

* deleted emoSpringSecurity-0.0.1-SNAPSHOT.jar

* delete Procfile

* chore(build_deploy):Create build_switch_and_deploy.sh